--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+appdirs==1.4.0
 awsebcli==3.7.7
 blessed==1.9.5
 boto==2.42.0
 botocore==1.4.41
 cement==2.8.2
 colorama==0.3.7
+contextlib2==0.5.4
 Django==1.9.7
 django-allauth==0.25.2
+django-model-utils==2.6
 django-storages-redux==1.3.2
 django-summernote==0.8.5
 docker-py==1.7.2
@@ -15,12 +18,15 @@ docutils==0.12
 jmespath==0.9.0
 MySQL-python==1.2.5
 oauthlib==1.1.2
+packaging==16.8
 pathspec==0.3.4
 Pillow==3.3.0
+pyparsing==2.1.10
 python-dateutil==2.5.3
 python-openid==2.2.5
 pytz==2016.4
 PyYAML==3.11
+raven==5.32.0
 requests==2.9.1
 requests-oauthlib==0.6.1
 semantic-version==2.5.0
@@ -28,4 +34,3 @@ six==1.10.0
 texttable==0.8.4
 wcwidth==0.1.7
 websocket-client==0.37.0
-django-model-utils==2.6
