--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 appdirs==1.4.0
-awsebcli==3.7.7
-blessed==1.9.5
+awsebcli==3.9.1
+blessed==1.14.1
 boto==2.42.0
-botocore==1.4.41
+botocore==1.5.10
 cement==2.8.2
 colorama==0.3.7
 contextlib2==0.5.4
@@ -14,23 +14,24 @@ django-summernote==0.8.5
 docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
-docutils==0.12
-jmespath==0.9.0
+docutils==0.13.1
+jmespath==0.9.1
 MySQL-python==1.2.5
 oauthlib==1.1.2
 packaging==16.8
-pathspec==0.3.4
+pathspec==0.5.0
 Pillow==3.3.0
 pyparsing==2.1.10
-python-dateutil==2.5.3
+python-dateutil==2.6.0
 python-openid==2.2.5
 pytz==2016.4
-PyYAML==3.11
+PyYAML==3.12
 raven==5.32.0
 requests==2.9.1
 requests-oauthlib==0.6.1
 semantic-version==2.5.0
 six==1.10.0
+tabulate==0.7.5
 texttable==0.8.4
 wcwidth==0.1.7
-websocket-client==0.37.0
+websocket-client==0.40.0
