--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-appdirs==1.4.0
-awsebcli==3.9.1
+appdirs==1.4.1
+awsebcli==3.10.0
 blessed==1.14.1
 boto==2.42.0
-botocore==1.5.10
+botocore==1.5.16
 cement==2.8.2
 colorama==0.3.7
 contextlib2==0.5.4
@@ -32,6 +32,7 @@ requests-oauthlib==0.6.1
 semantic-version==2.5.0
 six==1.10.0
 tabulate==0.7.5
+termcolor==1.1.0
 texttable==0.8.4
 wcwidth==0.1.7
 websocket-client==0.40.0
